[project]
name = "prime-rl"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "beartype>=0.21.0",
    "cydifflib>=1.2.0",
    "datasets",
    "jaxtyping>=0.3.2",
    "liger-kernel>=0.5.10",
    "loguru>=0.7.3",
    "numpy>=2.2.6",
    "openai>=1.106.1",
    "pydantic>=1.10.13",
    "pydantic-settings>=2.10.1",
    "pylatexenc>=2.10",
    "tomli>=2.2.1",
    "uvloop>=0.21.0",
    "wandb",
    "rich>=14.0.0",
    "tomli-w>=1.2.0",
    "textarena>=0.6.16",
    "nltk>=3.9.1",
    "math-verify>=0.8.0",
    "blobfile>=3.0.0",
    "reverse-text>=0.1.4",
    "reverse-text",
    "prime-evals>=0.1.5",
    "prime-sandboxes>=0.2.5",
    "prime>=0.5.0",
    "torch==2.9.1+cu128",
    "accelerate>=1.10.1",
    "dion",
    "lovely-tensors>=0.1.18",
]

[project.scripts]
rl = "prime_rl.rl:main"
trainer = "prime_rl.trainer.rl.train:main"
orchestrator = "prime_rl.orchestrator.orchestrator:main"
inference = "prime_rl.inference.server:main"
sft = "prime_rl.trainer.sft.train:main"
eval = "prime_rl.eval.eval:main"
synthesize = "prime_rl.synthesize.synthesize:main"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]


[tool.uv]
no-build-isolation-package = ["flash-attn"]
prerelease = "allow"
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'aarch64'"
]

# ============================
# Required Environment Targets
# ============================
#[tool.uv.required-environments]
#aarch64-linux = { platform_machine = "aarch64", sys_platform = "linux" }


[tool.uv.sources]
reverse-text = { index = "primeintellect" }
verifiers = { git = "https://github.com/PrimeIntellect-ai/verifiers.git", rev = "ca6aca7" }
dion = { git = "https://github.com/samsja/dion.git", rev = "main" }
torch = { index = "pytorch-cu128" }  # Add this line

[[tool.uv.index]]
name = "primeintellect"
url = "https://hub.primeintellect.ai/primeintellect/simple/"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"

[tool.ruff.lint]
select = ["F", "I"]
ignore = ["F722", "F821"] # Need to ignore for jaxtyping (https://docs.kidger.site/jaxtyping/faq/)

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests as gpu (deselect with '-m \"not gpu\"')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

